# ear_robot

./: README.md  package.xml  setup.py
ear_servo/: README.md  package.xml  setup.py
ear_servo/config/: default.yaml
ear_servo/ear_servo/: __init__.py  ear_servo_pose_node.py  metrics_logger.py  tracking.py
ear_servo/launch/: bringup.launch.py
launch/: bringup.launch.py
tracking/: aggregate_frames.py  baseline_ncc.py  collect_data.sh  klt.py  sift.py  sift_many_anchors.py  tracking_node.py  trajectory_server.py
tracking/labels/: part15.json  part5.json
