<?xml version="1.0"?>
<package format="3">
  <name>ear_servo</name>
  <version>0.1.0</version>
  <description>KLT+RANSAC tracking and pose servo</description>
  <maintainer email="you@example.com">Quitterie</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- OpenCV & numpy come via pip; okay for Python packages -->
</package>
